--- a/config/proofCarryingCode-albe.properties
+++ b/config/proofCarryingCode-albe.properties
@@ -18,7 +18,7 @@ specification = config/specification/ErrorLabel.spc
 
 # ALBE set up
 cpa.predicat.blk.alwaysAtLoops = true
-cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtFunctions = true
 
 #threshold != 0 && alwaysAtFunctions && ALBENOINDINVARIANT
 # cpa.predicate.cpa.predicate.satCheck = 0
