fixed configuration for albe, lbe, abe such that they are fast enough
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/pcc@4971 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/proofCarryingCode-abe.properties
+++ b/config/proofCarryingCode-abe.properties
@@ -1,4 +1,6 @@
 # set up configuration for ART construction 
+analysis.traversal.order = bfs
+analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
 
@@ -17,17 +19,20 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 specification = config/specification/ErrorLabel.spc
 
 # ABE set up
-cpa.predicat.blk.alwaysAtLoops = true
+cpa.predicate.blk.alwaysAtLoops = true
 
 #threshold != 0 && alwaysAtFunctions && ALBENOINDINVARIANT
 # cpa.predicate.cpa.predicate.satCheck = 0
 
 # threshold = 1 -> cartesian = true && threshold !=1 -> cartesian = false
-cpa.predicate.abstraction.cartesian = true
-cpa.predicate.blk.threshold = 1
+cpa.predicate.abstraction.cartesian = false
+cpa.predicate.blk.threshold = 0
 
 # these settings may be disabled
-#cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtFunctions = false
+
+#this setting may be enabled
+#cpa.predicate.symbolicCoverageCheck = true
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -53,4 +58,6 @@ pcc.proofgen.algorithm = ABENOINDART
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
 #pcc.proofgen.file = "pccProof.txt"
+
+log.consoleLevel = SEVERE
 
