--- a/config/proofCarryingCode-lbe.properties
+++ b/config/proofCarryingCode-lbe.properties
@@ -1,4 +1,6 @@
 # set up configuration for ART construction 
+analysis.traversal.order = bfs
+analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
 
@@ -20,7 +22,7 @@ specification = config/specification/ErrorLabel.spc
 cpa.predicate.abstraction.cartesian = false
 cpa.predicate.blk.threshold = 0
 cpa.predicate.blk.alwaysAtFunctions = true
-cpa.predicat.blk.alwaysAtLoops = true
+cpa.predicate.blk.alwaysAtLoops = true
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -41,3 +43,4 @@ pcc.proofgen.algorithm = LBENOINDART
 # default pccProof.txt
 #pcc.proofgen.file = "pccProof.txt"
 
+log.consoleLevel = SEVERE
