--- a/config/proofCarryingCode-sbe.properties
+++ b/config/proofCarryingCode-sbe.properties
@@ -1,4 +1,4 @@
-# set up configuration for ART construction 
+# set up configuration for ART construction
 
 analysis.useRefinement = true
 
@@ -22,10 +22,10 @@ cpa.predicate.blk.threshold = 1
 
 # these settings may be disabled
 #cpa.predicate.blk.alwaysAtFunctions = false
-#cpa.predicat.blk.alwaysAtLoops = false
+#cpa.predicate.blk.alwaysAtLoops = false
 
 #this setting may be enabled
-#cpa.predicate.symbolicCoverage = true
+#cpa.predicate.symbolicCoverageCheck = true
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
