--- a/config/proofCarryingCode-albe.properties
+++ b/config/proofCarryingCode-albe.properties
@@ -1,4 +1,6 @@
 # set up configuration for ART construction 
+analysis.traversal.order = bfs
+analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
 
@@ -17,15 +19,18 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 specification = config/specification/ErrorLabel.spc
 
 # ALBE set up
-cpa.predicat.blk.alwaysAtLoops = true
+cpa.predicate.blk.alwaysAtLoops = true
 cpa.predicate.blk.alwaysAtFunctions = true
 
 #threshold != 0 && alwaysAtFunctions && ALBENOINDINVARIANT
 # cpa.predicate.cpa.predicate.satCheck = 0
 
 # threshold = 1 -> cartesian = true && threshold !=1 -> cartesian = false
-cpa.predicate.abstraction.cartesian = true
-cpa.predicate.blk.threshold = 1
+cpa.predicate.abstraction.cartesian = false
+cpa.predicate.blk.threshold = 2
+
+#this setting may be enabled
+#cpa.predicate.symbolicCoverageCheck = true
 
 # CFA configuration
 # only paths to possible error locations are analyzed, may be used
@@ -46,9 +51,13 @@ pcc.proofgen.doPCC = true
 #   LBENOINDART, LBENOINDINVARIANT
 # always 
 #   ALBENOINDART, ALBENOINDINVARIANT, ABENOINDART
-pcc.proofgen.algorithm = ALBENOINDART
+pcc.proofgen.algorithm = ABENOINDART
 
 #specifies the file to which proof is written/from which the proof is read from
 # default pccProof.txt
 #pcc.proofgen.file = "pccProof.txt"
+
+log.consoleLevel = SEVERE
+
+
 
