Changed special property for runtime verification to use cegar timeout feature. Added some output for debugging.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@5005 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-timelimit.properties
+++ b/config/predicateAnalysis-timelimit.properties
@@ -39,3 +39,9 @@ parser.ignoreCasts = true
 
 cegar.stopRefiningThreshold = 5000
 analysis.contiuneOnCounterexample = true
+
+reachedSet.export = true
+reachedSet.file = reached.txt
+
+cpa.art.export = true
+cpa.art.file = ART.dot
