--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -40,3 +40,13 @@ parser.ignoreCasts = true
 analysis.entryFunction = entry
 cpa.explicit.variableBlacklist = (?!.*__MONITOR_).*
 
+cegar.stopRefiningThreshold = 1000
+analysis.contiuneOnCounterexample = true
+
+# debugging
+reachedSet.export = true
+reachedSet.file = reached.txt
+
+cpa.art.export = true
+cpa.art.file = ART.dot
+
