Postprocessing can now be disabled.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@5010 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -42,6 +42,7 @@ cpa.explicit.variableBlacklist = (?!.*__MONITOR_).*
 
 cegar.stopRefiningThreshold = 100
 analysis.contiuneOnCounterexample = true
+analysis.usePostProcessing = true
 
 # debugging
 reachedSet.export = true
