--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -42,7 +42,7 @@ cpa.explicit.variableBlacklist = (?!.*__MONITOR_).*
 
 cegar.stopRefiningThreshold = 100
 analysis.contiuneOnCounterexample = true
-analysis.usePostProcessing = true
+analysis.postProcessing = true
 
 # debugging
 reachedSet.export = true
