Added example for non-trivial automaton. Fixed some bugs in implementation.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@5013 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -31,8 +31,9 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # this automaton defines which locations are the error locations
 specification = test/programs/simple/runtime_verification/observermonitor.spc
 
-cpa.predicate.blk.alwaysAtFunctions = false
-cpa.predicate.blk.alwaysAtLoops     = true
+cpa.predicate.blk.alwaysAtFunctions    = false
+cpa.predicate.blk.alwaysAtLoops        = true
+cpa.predicate.blk.alwaysAtEndOfProgram = true
 
 # casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
 parser.ignoreCasts = true
