set explicit analysis threshold to 200000 (threshold=0 seems to be bugged?)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@5015 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -40,6 +40,7 @@ parser.ignoreCasts = true
 
 analysis.entryFunction = entry
 cpa.explicit.variableBlacklist = (?!.*__MONITOR_).*
+cpa.explicit.threshold = 200000
 
 cegar.stopRefiningThreshold = 100
 analysis.contiuneOnCounterexample = true
