Switch to new timeout implementation where already possible.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@5022 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/uninitVars-heuristics.properties
+++ b/config/uninitVars-heuristics.properties
@@ -1,6 +1,3 @@
-analysis.useAssumptionCollector = true
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.resourcelimit.ResourceLimitCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.uninitvars.UninitializedVariablesCPA
-
-cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
-cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 10000
+cpa.resourcelimit.time.wall = 10000
