--- a/test/assumptions/explicitAnalysis-10s-timelimit.properties
+++ b/test/assumptions/explicitAnalysis-10s-timelimit.properties
@@ -15,7 +15,7 @@ analysis.useAssumptionCollector = true
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.resourcelimit.ResourceLimitCPA, cpa.explicit.ExplicitCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.conditions.globalconditions.GlobalConditionsCPA, cpa.explicit.ExplicitCPA
 
 cpa.explicit.threshold = 200000
 
