--- a/test/assumptions/explicit-adjustableConditions.properties
+++ b/test/assumptions/explicit-adjustableConditions.properties
@@ -15,7 +15,7 @@ counterexample.continueAfterInfeasibleError = true
 
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.explicit.ExplicitCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.explicit.ExplicitCPA, cpa.conditions.globalconditions.GlobalConditionsCPA
 
 cpa.explicit.threshold = 200000
 
