--- a/config/uninitVars-heuristics.properties
+++ b/config/uninitVars-heuristics.properties
@@ -1,3 +1,3 @@
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.conditions.globalconditions.GlobalConditionsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.conditions.global.GlobalConditionsCPA
 
 cpa.resourcelimit.time.wall = 10000
