--- a/test/assumptions/predicate-adjustableConditions.properties
+++ b/test/assumptions/predicate-adjustableConditions.properties
@@ -10,7 +10,7 @@ cegar.refiner = cpa.predicate.PredicateRefiner
 
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.predicate.PredicateCPA, cpa.conditions.global.GlobalConditionsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.conditions.path.PathConditionsCPA, cpa.predicate.PredicateCPA, cpa.conditions.global.GlobalConditionsCPA
 
 cpa.conditions.global.time.wall = 60000
 #cpa.conditions.global.time.wall.hardlimit = 180000
