--- a/test/assumptions/uninitvars-adjustableConditions.properties
+++ b/test/assumptions/uninitvars-adjustableConditions.properties
@@ -4,7 +4,7 @@ analysis.useAdjustableConditions=true
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.conditions.global.GlobalConditionsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.conditions.path.PathConditionsCPA, cpa.uninitvars.UninitializedVariablesCPA, cpa.conditions.global.GlobalConditionsCPA
 
 cpa.conditions.global.time.wall = 1000
 cpa.conditions.global.time.wall.hardlimit = 10000
