Update configuration files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@5059 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/assumptions/explicitAnalysis-10s-timelimit.properties
+++ b/test/assumptions/explicitAnalysis-10s-timelimit.properties
@@ -22,4 +22,4 @@ cpa.explicit.threshold = 200000
 # this automaton defines which locations are the error locations
 specification = config/specification/ErrorLocation.spc
 
-cpa.resourcelimit.time.wall = 10000
+cpa.conditions.global.time.wall = 10s
