--- a/test/assumptions/predicate-adjustableConditions.properties
+++ b/test/assumptions/predicate-adjustableConditions.properties
@@ -12,8 +12,8 @@ cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.conditions.path.PathConditionsCPA, cpa.predicate.PredicateCPA, cpa.conditions.global.GlobalConditionsCPA
 
-cpa.conditions.global.time.wall = 60000
-#cpa.conditions.global.time.wall.hardlimit = 180000
+cpa.conditions.global.time.wall = 1min
+#cpa.conditions.global.time.wall.hardlimit = 3min
 
 # this automaton defines which locations are the error locations
 specification = config/specification/ErrorLocation.spc
