--- a/config/predicateAnalysis-abm.properties
+++ b/config/predicateAnalysis-abm.properties
@@ -15,7 +15,7 @@ ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
 
 FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA, cpa.conditions.global.GlobalConditionsCPA
 
 cpa.art.export = false
 cpa.art.errorPath.export = false
@@ -33,3 +33,6 @@ cpa.predicate.abm.auxiliaryPredicateComputer = false
 
 # casts are ignored by PredicateCPA anyway, thus we can remove all of them and work around a CIL bug
 parser.ignoreCasts = true
+
+# Set time limit to 15 minutes
+cpa.conditions.global.time.wall = 15min
