--- a/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
+++ b/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
@@ -1,70 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE project> <!-- generic AcceptAllDTD to make the Eclipse Warning go away -->
+<!-- vim: set tabstop=8 shiftwidth=4 expandtab : -->
 <project name="FQLParserGeneration" default="generate-parser" basedir="./../../../../../../../">
-  <!-- basedir should be the "CPAchecker" directory -->
-  <property name="parserDir" location="src/org/sosy_lab/cpachecker/fshell/fql2/parser/" />
-  <property name="src"       location="src" />
-  <property name="lib"       location="lib" />
-  <property environment="env" />
+    <!-- basedir should be the "CPAchecker" directory -->
 
-  <taskdef name="jflex"
-           classname="JFlex.anttask.JFlexTask"
-	   classpath="${lib}/build-only/JFlex.jar"
-  />
-  <taskdef name="cup"
-           classname="java_cup.anttask.CUPTask"
-           classpath="${lib}/java-cup-11a.jar"
-  />
+    <property name="dir.parser" location="src/org/sosy_lab/cpachecker/fshell/fql2/parser/" />
+    <property name="scanner.source" value="FQL.lex"/>
+    <property name="scanner.target" value="FQLLexer"/>
+    <property name="parser.source" value="FQL.cup"/>
+    <property name="parser.target" value="FQLParser"/>
+    <property name="symbols.target" value="FQLSym"/>
 
-  <target name="echos">
-  	<echo>${lib}</echo>
-  	<echo>${src}</echo>
-  	<echo>${parserDir}</echo>
-  	<echo>${basedir}</echo>
-  </target>
-
-  <uptodate property="scanner.uptodate" srcfile="${parserDir}/FQL.lex" targetfile="${parserDir}/FQLLexer.java"/>
-
-  <condition property="parser.uptodate">
-    <and>
-      <isset property="scanner.uptodate"/>
-      <uptodate srcfile="${parserDir}/FQL.cup" targetfile="${parserDir}/FQLParser.java"/>
-    </and>
-  </condition>
-
-  <target name="generate-scanner" unless="scanner.uptodate" description="Generate FQL scanner">
-    <echo message="Generate scanner..." level="info"/>
-    <jflex file="${parserDir}/FQL.lex" destdir="${src}" skel="${parserDir}/skeleton.nested"/>
-
-    <!-- remove generation date to not interfere with SVN -->
-    <replaceregexp file="${parserDir}/FQLLexer.java" match="\d\d\.\d\d.\d\d \d\d:\d\d" replace="[date omitted]" flags="g" />
-    <replaceregexp file="${parserDir}/FQLLexer.java" match="(.tt>).*/(src/org/sosy_lab/cpachecker/fshell/fql2/parser/FQL.lex./tt>)" replace="\1\2" />
-  </target>
-
-
-  <target name="generate-parser" depends="generate-scanner" unless="parser.uptodate" description="Generate FQL parser">
-    <echo message="Generate parser..." level="info"/>
-    <cup srcfile="${parserDir}/FQL.cup"
-         destdir="${src}"
-         interface="true"
-         parser="FQLParser"
-    	 symbols="FQLSym"
-    	 nopositions="true"
-    />
-
-    <!-- remove generation date to not interfere with SVN -->
-    <replaceregexp match="(Mon|Tue|Wed|Thu|Fri|Sat|Sun) \w\w\w \d\d \d\d:\d\d:\d\d \w+ \d\d\d\d" replace="[date omitted]" flags="g">
-	<fileset dir="${parserDir}">
-	    <include name="FQLParser.java"/>
-	    <include name="FQLSym.java"/>
-	</fileset>
-    </replaceregexp>
-
-    <!-- places the suppressWarnings-tag in front of the outer class -->
-    <replace file="${parserDir}/FQLParser.java" token="public class " value="@SuppressWarnings(value = { &quot;all&quot; }) public  class "/>
-    <!-- places the suppressWarnings-tag in front of the inner class -->
-    <replace file="${parserDir}/FQLParser.java" token="class CUP$" value="@SuppressWarnings(value = { &quot;all&quot; }) class  CUP$"/>
-  	<!-- SVN had "inconsistent line endings"-Problems. Let ANT fix it, uses the system default line ending -->
-  	<fixcrlf file="${parserDir}/FQLParser.java" />
-  </target>
+    <import file="${basedir}/build-parser.xml"/>
 </project>
