Apply changes from trunk.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/fshell3@5094 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/,
 source.. = src/
-bin.excludes = lib/build-only/,\
-               lib/eclipse/,\
-               lib/native/
+bin.excludes = lib/native/
