--- a/config/explicitAnalysis-no-cbmc.properties
+++ b/config/explicitAnalysis-no-cbmc.properties
@@ -8,6 +8,7 @@
 #cfa.removeIrrelevantForErrorLocations = true
 
 # FunctionPointerCPA provides handling of function pointers
+cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
 
 FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
