--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -39,7 +39,7 @@ cpa.predicate.blk.alwaysAtEndOfProgram = true
 parser.ignoreCasts = true
 
 analysis.entryFunction = entry
-cpa.explicit.variableBlacklist = (?!.*__MONITOR_).*
+cpa.explicit.variableBlacklist = (?!.*__MONITOR_STATE).*
 cpa.explicit.threshold = 200000
 
 cegar.stopRefiningThreshold = 100
@@ -52,4 +52,5 @@ reachedSet.file = reached.txt
 
 cpa.art.export = true
 cpa.art.file = ART.dot
+cpa.art.dumpART = false
 
