Added configurable option to enable/disable aggressive caching in ABM.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@5171 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-abm.properties
+++ b/config/predicateAnalysis-abm.properties
@@ -25,6 +25,7 @@ specification = config/specification/ErrorLocation.spc
 
 cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
 cpa.abm.gatherCacheMissStatistics = false
+cpa.abm.aggressiveCaching = true
 
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
