Change the config of our internal counterexample checks with Value Analysis: variables that have their address taken are now excluded from the check (the value analysis cannot track them reliably).
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15398 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/cex-checks/valueAnalysis-as-cex-check.properties
+++ b/config/cex-checks/valueAnalysis-as-cex-check.properties
@@ -13,3 +13,5 @@ output.disable = true
 // If main analysis has -skipRecursion, we want to ignore recursive calls here as well.
 // If main analysis does not have -skipRecursion, setting this here has no effect.
 cpa.callstack.skipRecursion = true
+
+precision.trackAddressedVariables = false
