Update config files for symbolic execution.
Rename config files to new naming scheme (explicitAnalysis -> valueAnalysis)
and adjust configs.



git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symbolic@15440 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -3,19 +3,11 @@
 # variables in a model-checking configuration.
 # CBMC is used to cross-check counterexamples.
 # ------------------------------------------------------------------
-
-# CBMC is used to cross-check counterexamples
-analysis.checkCounterexamples = true
-
-# enable use of multi-edges
-cfa.useMultiEdges             = true
+#include valueAnalysis.properties
 
 # ARGCPA is needed for counterexample analysis
-cpa                     = cpa.arg.ARGCPA
-ARGCPA.cpa              = cpa.composite.CompositeCPA
 CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
 
-# this automaton defines which locations are the error locations
-specification = ../specification/default.spc
+cpa.value.symbolicExecution = true
 
 #include resource-limits.properties
