--- a/config/valueAnalysis-symbolic-java.properties
+++ b/config/valueAnalysis-symbolic-java.properties
@@ -3,20 +3,14 @@
 # variables in a model-checking configuration.
 # ------------------------------------------------------------------
 
-# ARGCPA is needed for counterexample analysis
-cpa = cpa.arg.ARGCPA
-
-ARGCPA.cpa  = cpa.composite.CompositeCPA
+#include includes/valueAnalysis-symbolic.properties
 
 CompositeCPA.cpas = cpa.rtt.RTTCPA , cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
-
-cpa.value.symbolicExecution = true
 
 # this automaton defines which locations are the error locations
 specification = specification/JavaAssertion.spc
 
 #include includes/resource-limits.properties
-
 language = Java
 
 # don't transform to C File (not supported)
