--- a/config/liveVariables.properties
+++ b/config/liveVariables.properties
@@ -1,15 +1,19 @@
 analysis.traversal.order = BFS
-analysis.traversal.useReversePostorder = true
+analysis.traversal.usePostorder = true
 
-analysis.initialStatesFor = PROGRAM_SINKS
+
 # we use the whole program for the analysis, thus we want the global variables
 # to not be live per default
 cpa.liveVar.assumeGlobalVariablesAreAlwaysLive = false
+analysis.traversal.useCallstack = true
+analysis.initialStatesFor = PROGRAM_SINKS
+
 
 # an alternative configuration for a function-wise evaluation would be:
 # analysis.initialStatesFor = FUNCTION_SINKS
 # cpa.liveVars.cpa.liveVars.assumeGlobalVariablesAreAlwaysLive = true
 # cpa.location.followFunctionCalls = false
+# analysis.traversal.useCallstack = false
 
 
 cpa                     = cpa.arg.ARGCPA
