Use bfs for symbolic execution.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symbolic@15484 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/valueAnalysis-symbolic.properties
+++ b/config/valueAnalysis-symbolic.properties
@@ -4,3 +4,7 @@
 # ------------------------------------------------------------------
 
 #include includes/valueAnalysis-symbolic.properties
+
+analysis.traversal.order = bfs
+analysis.traversal.useReversePostorder = true
+analysis.traversal.useCallstack = true
