adapted configuration to changes in configuration
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@15557 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/simple/runtime_verification/predicateAnalysis-opt.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis-opt.properties
@@ -12,7 +12,7 @@ analysis.traversal.order = bfs
 analysis.traversal.useCallstack = true
 analysis.traversal.useReversePostorder = true
 
-analysis.useRefinement = true
+analysis.algorithm.CEGAR = true
 
 cegar.refiner = cpa.predicate.PredicateRefiner
 
