--- a/test/programs/simple/runtime_verification/predicateAnalysis.properties
+++ b/test/programs/simple/runtime_verification/predicateAnalysis.properties
@@ -12,7 +12,7 @@ analysis.traversal.order = bfs
 analysis.traversal.useCallstack = true
 analysis.traversal.useReversePostorder = true
 
-analysis.useRefinement = true
+analysis.algorithm.CEGAR = true
 
 cegar.refiner = cpa.predicate.PredicateRefiner
 
