updated configuration files due to recent changes
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15570 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/reachingdefinitionARG.properties
+++ b/config/reachingdefinitionARG.properties
@@ -4,7 +4,9 @@ cpa = cpa.PropertyChecker.PropertyCheckerCPA
  PropertyCheckerCPA.cpa = cpa.arg.ARGCPA
  ARGCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.reachdef.ReachingDefCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.reachdef.ReachingDefCPA
+
+cpa.callstack.domain = FLATPCC
 
 #include includes/resource-limits.properties
 
