--- a/config/valueAnalysis-pcc-trac-allARG.properties
+++ b/config/valueAnalysis-pcc-trac-allARG.properties
@@ -4,6 +4,8 @@ cpa = cpa.PropertyChecker.PropertyCheckerCPA
  PropertyCheckerCPA.cpa = cpa.arg.ARGCPA
  ARGCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.value.ValueAnalysisCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA
+
+cpa.callstack.domain = FLATPCC
 
 #include includes/resource-limits.properties
