--- a/config/reachingdef-valueARG.properties
+++ b/config/reachingdef-valueARG.properties
@@ -4,7 +4,8 @@ cpa = cpa.PropertyChecker.PropertyCheckerCPA
  PropertyCheckerCPA.cpa = cpa.arg.ARGCPA
  ARGCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.value.ValueAnalysisCPA, cpa.reachdef.ReachingDefCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA, cpa.reachdef.ReachingDefCPA
+cpa.callstack.domain = FLATPCC
 
 #include includes/resource-limits.properties
 
