--- a/config/reachingdefinition.properties
+++ b/config/reachingdefinition.properties
@@ -3,7 +3,8 @@
 cpa = cpa.PropertyChecker.PropertyCheckerCPA
 PropertyCheckerCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.reachdef.ReachingDefCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.reachdef.ReachingDefCPA
+cpa.callstack.domain = FLATPCC
 
 #include includes/resource-limits.properties
 
