--- a/config/signAnalysis-propertycheck.properties
+++ b/config/signAnalysis-propertycheck.properties
@@ -2,6 +2,8 @@ analysis.traversal.order = BFS
 
 cpa = cpa.PropertyChecker.PropertyCheckerCPA
 PropertyCheckerCPA.cpa = cpa.composite.CompositeCPA
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.sign.SignCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.sign.SignCPA
+
+cpa.callstack.domain = FLATPCC
 
  
