--- a/config/signAnalysisARG-propertycheck.properties
+++ b/config/signAnalysisARG-propertycheck.properties
@@ -3,6 +3,8 @@ analysis.traversal.order = BFS
 cpa = cpa.PropertyChecker.PropertyCheckerCPA
 PropertyCheckerCPA.cpa = cpa.arg.ARGCPA
 ARGCPA.cpa = cpa.composite.CompositeCPA
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstackPCC.CallstackPccCPA, cpa.sign.SignCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.sign.SignCPA
+
+cpa.callstack.domain = FLATPCC
 
  
