--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -6,7 +6,7 @@
 #include valueAnalysis.properties
 
 # ARGCPA is needed for counterexample analysis
-CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
+CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.constraints.ConstraintsCPA, cpa.value.ValueAnalysisCPA
 
 cpa.value.symbolicExecution = true
 
