Change name of option "useInvariantsForInduction" to "addInvariantsByAI", as it specifically refers to the usage of the CPA invariant generator; there is also the option "addInvariantsByInduction" and both of these options may be used independently of each other, in combination or not at all.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15674 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -14,7 +14,8 @@ bmc.induction = true
 cfa.transformIntoSingleLoop = true
 
 // provide additional automatically generated invariants to the induction proof
-bmc.useInvariantsForInduction = true
+bmc.addInvariantsByAI = true
+bmc.addInvariantsByInduction = true
 
 // config file for invariant generation for induction
 invariantGeneration.config = invariantGeneration-no-out.properties
