BMC now supports SMTInterpol, because multiple stacks can be used when multiple instances of the solver are used. We therefore no longer need to enforce Mathsat5 for BMC.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15694 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -34,3 +34,5 @@ cpa.loopstack.maxLoopIterations = 1
 
 // increment the bound by one in every iteration of deepening
 cpa.loopstack.maxLoopIterationAdjusterFactory = INCREMENT
+
+cpa.predicate.solver = SMTInterpol
