Avoid huge amount of messages about dead code that typically occur for Linux code when using the -ldv configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15769 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/ldv.properties
+++ b/config/ldv.properties
@@ -59,3 +59,6 @@ cpa.predicate.memoryAllocationsAlwaysSucceed = false
 
 # New heuristic for cillified files: pre-populate small structures with all their fields
 cpa.predicate.maxPreFilledAllocationSize = 0
+
+# Avoid typically huge amount of messages about dead code
+cfa.showDeadCode = false
