Update to newest version of SMTInterpol with a fix for NullPointerException in LAInterpolator.AnnotInfo.color (should fix #203).
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15773 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -81,7 +81,7 @@
         <dependency org="org.eclipse.jdt" name="core" rev="3.9.2.v20140114-1555" conf="runtime->default; contrib->sources"/>
 
         <!-- SmtInterpol -->
-        <dependency org="de.uni-freiburg.informatik.ultimate" name="smtinterpol" rev="2.1-174-ga199d47" conf="runtime->runtime; contrib->sources">
+        <dependency org="de.uni-freiburg.informatik.ultimate" name="smtinterpol" rev="2.1-182-gd8d33f1" conf="runtime->runtime; contrib->sources">
           <artifact name="smtinterpol" e:classifier="comp" conf="runtime"/>
           <artifact name="smtinterpol" e:classifier="sources" conf="contrib" ext="zip"/>
         </dependency>
