Added support for assume case matching in witness checking. The singlePathMatching option should now no longer be required and has therefore been removed.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15775 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/witness-check.properties
+++ b/config/witness-check.properties
@@ -30,5 +30,9 @@ cfa.simplifyCfa                        = false
 cfa.useMultiEdges                      = false
 
 parser.transformTokensToLines          = false
+
+spec.matchOriginLine                   = true
+spec.matchOffset                       = true
+spec.matchAssumeCase                   = true
 spec.matchSourcecodeData               = false
-spec.strictLineMatching                = false
+spec.strictMatching                    = false
