The default config for k-Induction uses parallel k-induction for invariant generation and requires SMTInterpol, which does not support floats.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15791 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -36,3 +36,4 @@ cpa.loopstack.maxLoopIterations = 1
 cpa.loopstack.maxLoopIterationAdjusterFactory = INCREMENT
 
 cpa.predicate.solver = SMTInterpol
+cpa.predicate.encodeFloatAs = RATIONAL
