Policy Iteration: update settings, integration testing configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15806 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -10,7 +10,7 @@ specification = specification/default.spc
 
 cfa.findLiveVariables = true
 
-analysis.traversal.useCallstack=true
 cpa.stator.policy.generateOctagons=true
 analysis.summaryEdges = true
 analysis.traversal.order = bfs
+analysis.reportFalseAsUnknown = true
