--- a/config/ldv.properties
+++ b/config/ldv.properties
@@ -47,6 +47,10 @@ cpa.predicate.nondetFunctions = nondet_int,sscanf,random,ldv_undef_ptr,ldv_undef
 # Ignore function calls by pointer if the value of pointer variable is not known by FunctionPointerCPA
 cpa.functionpointer.ignoreUnknownFunctionPointerCalls=true
 
+# Workaround for #193
+# (Conflicting PredicateCPA and FunctionPointerCPA with ignoreUnknownFunctionPointerCalls heuristic)
+cpa.predicate.trackFunctionPointers=false
+
 # Pointer analysis with UF options
 cpa.predicate.handlePointerAliasing = true
 
