copy latest version of build scripts with fixes from SoSy-Lab Common
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15864 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
     <property name="ivy.settings.file" value="lib/ivysettings.xml"/>
     <property name="junit.dir" value="output/junit"/>
     <property name="class.main" value="org.sosy_lab.cpachecker.cmdline.CPAMain"/>
+    <property name="jar.excludes" value=""/>
     <property name="project.url" value="http://cpachecker.sosy-lab.org"/>
 
     <import file="build/build-ivy.xml"/>
