Added an option for allowing then/else branch swapping during CFA creation. The option is on by default, but must be turned off when producing or checking witnesses. The long-term goal for all analyses should therefore be to become independent of this trick; otherwise they will not be able to participate in future SV-COMPs, where witnesses will be required.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15942 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/witness-check.properties
+++ b/config/witness-check.properties
@@ -24,6 +24,9 @@ cfa.simplifyCfa                        = false
 # because it should be fast anyway; also, it might cause problems
 cfa.useMultiEdges                      = false
 
+# For witness checking, then/else branches must be mapped correctly
+cfa.allowBranchSwapping                = false
+
 parser.transformTokensToLines          = false
 
 spec.matchOriginLine                   = true
