--- a/config/combinations-value100+pred-cmc.properties
+++ b/config/combinations-value100+pred-cmc.properties
@@ -2,6 +2,10 @@
 # This configuration file uses a sequential combination of two
 # analyses: the ValueAnalysisCPA with a maximum execution time of 100s
 # and the Adjustable-Block Encoding CPA for predicate analysis.
+# Combination is based on conditional model checking (CMC).
+# First analysis generates an assumption describing which states cannot
+# be verified. Second analysis uses the assumption to only verify the
+# remaining non-verified program parts.
 # ----------------------------------------------------------------------
 
 # Use sequential combination of analyses.
