--- a/config/policy.properties
+++ b/config/policy.properties
@@ -4,7 +4,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 cpa.predicate.solver = Z3
 
 # Might need to experiment with the option below.
-cpa.predicate.ignoreIrrelevantVariables = false
+cpa.predicate.ignoreIrrelevantVariables = true
 
 specification = specification/default.spc
 
@@ -14,3 +14,5 @@ cpa.stator.policy.generateOctagons=true
 analysis.summaryEdges = true
 analysis.traversal.order = bfs
 analysis.reportFalseAsUnknown = true
+
+cpa.callstack.produceUniqueStates=false
