Use float encoding of floats in symbolic execution by default.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symbolic@16050 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -12,7 +12,7 @@ cpa.value.symbolicExecution = true
 # MathSAT is needed for multiple parallel solver stacks
 cpa.predicate.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = Bitvector
-# cpa.predicate.encodeFloatAs = Float
+cpa.predicate.encodeFloatAs = Float
 
 analysis.checkCounterexamples = false
 #include resource-limits.properties
