--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -7,7 +7,7 @@
 
 CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
 
-cpa.value.symbolicExecution = true
+cpa.value.useSymbolicValues = true
 
 # MathSAT is needed for multiple parallel solver stacks
 cpa.predicate.solver = MathSAT5
