update configs: only use DelegatingRefiner if predicate analysis is available, otherwise, use ValueAnalysisRefiner directly
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16088 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/valueAnalysis-ItpRefiner-ABElf.properties
+++ b/config/valueAnalysis-ItpRefiner-ABElf.properties
@@ -16,3 +16,5 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
+
+cegar.refiner                       = cpa.value.refiner.ValueAnalysisDelegatingRefiner
