--- a/config/components/sv-comp14--01-challenge.properties
+++ b/config/components/sv-comp14--01-challenge.properties
@@ -25,4 +25,4 @@ analysis.traversal.useCallstack        = true
 
 # use refinment and define the refiner to use
 analysis.algorithm.CEGAR               = true
-cegar.refiner                          = cpa.value.refiner.ValueAnalysisDelegatingRefiner
+cegar.refiner                          = cpa.value.refiner.ValueAnalysisRefiner
