Added a witness checking memory safety configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16135 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/witness-check--memorysafety.properties
+++ b/config/witness-check--memorysafety.properties
@@ -1,4 +1,10 @@
-#include sv-comp15.properties
+# ----------------------------------------------------------------------
+# This configuration file uses a combination of value analysis
+# and symbolic memory graphs to verify memory safety properties
+# for witness checking.
+# ----------------------------------------------------------------------
+
+#include includes/valueAnalysis.properties
 
 analysis.traversal.order               = bfs
 analysis.traversal.useReversePostorder = false
@@ -33,6 +39,24 @@ spec.matchAssumeCase                   = true
 spec.matchSourcecodeData               = false
 spec.strictMatching                    = false
 
+# specification to find memory related problems
+specification = specification/cpalien-leaks.spc, specification/TerminatingFunctions.spc
+
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.smg.SMGCPA
+
+analysis.unknownAsTrue = true
+
+# no counterexample check for memory safety
+analysis.checkCounterexamples = false
+
+cpa.smg.enableMallocFail       = false
+cpa.smg.handleUnknownFunctions = assume_safe
+cpa.smg.guessSizeOfUnknownMemorySize = false
+
 output.disable = false
 
+# Disable statistics for memory consumption.
+statistics.memory = false
+
+# This is the configuration used when verifying memory safety properties (actually this configuration).
 memorysafety.config = witness-check--memorysafety.properties
