--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -7,12 +7,13 @@
 
 CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
 
-cpa.value.useSymbolicValues = true
+cpa.value.symbolic.useSymbolicValues = true
 
 # MathSAT is needed for multiple parallel solver stacks
 cpa.predicate.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = Bitvector
 cpa.predicate.encodeFloatAs = Float
 
+analysis.traversal.order = bfs
 analysis.checkCounterexamples = false
 #include resource-limits.properties
