--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -87,7 +87,7 @@
         </dependency>
 
         <!-- Princess -->
-        <dependency org="org.ruemmer.philipp" name="princess" rev="2014-08-27" conf="runtime->default"/>
+        <dependency org="org.ruemmer.philipp" name="princess" rev="2015-03-13-r2180" conf="runtime->default"/>
 
         <!-- Google error-prone
              Compiler adaptor with some useful checks for common errors. -->
