added possibility to already exclude "false abstraction" by predicate transfer relation not later in precision adjustment Property required by proof checking algorithms which do not recompute precision adjustments
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16323 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-proofcheck-states.properties
+++ b/config/predicateAnalysis-proofcheck-states.properties
@@ -6,6 +6,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 cpa.callstack.domain = FLATPCC
 cpa.predicate.stop=SEPPCC
+cpa.predicate.satCheckAtAbstraction=true
 
 # this automaton defines which locations are the error locations
 specification = specification/default.spc
