--- a/config/predicateAnalysis.properties
+++ b/config/predicateAnalysis.properties
@@ -1,1 +1,3 @@
 #include predicateAnalysis-PredAbsRefiner-ABEl.properties
+bdd.variable.ordering.method=FRAMEWORK_SIFT
+bdd.variable.ordering.single.partition=false
