--- a/config/policy-counterexample-checking.properties
+++ b/config/policy-counterexample-checking.properties
@@ -1,4 +1,4 @@
-#include policy.properties
+#include policy-unrolling.properties
 
 analysis.checkCounterexamples = true
 counterexample.checker = CPACHECKER
