--- a/config/includes/valueAnalysis-symbolic.properties
+++ b/config/includes/valueAnalysis-symbolic.properties
@@ -1,15 +1,16 @@
 # ------------------------------------------------------------------
-# This configuration file uses explicit analysis of integer
-# variables in a model-checking configuration.
-# CBMC is used to cross-check counterexamples.
+# This configuration file uses symbolic value analysis
+# in a model-checking configuration.
+# Bitvector and float theories are used in satisfiability checks.
+# No counterexample checks occur.
 # ------------------------------------------------------------------
 #include valueAnalysis.properties
 
-CompositeCPA.cpas       = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.constraints.ConstraintsCPA
 
 cpa.value.symbolic.useSymbolicValues = true
 
-# MathSAT is needed for multiple parallel solver stacks
+# Use MathSAT5 for use of bitvector theory
 cpa.predicate.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = Bitvector
 cpa.predicate.encodeFloatAs = Float
