fixed missing # in properties file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/codeGen@16413 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-cex.properties
+++ b/config/predicateAnalysis-cex.properties
@@ -1,4 +1,4 @@
-include predicateAnalysis-PredAbsRefiner-ABEl.properties
+#include predicateAnalysis-PredAbsRefiner-ABEl.properties
 counterexample.checker=EXCHECK
 counterexample.excheck.codeFile=Excheck.c
 counterexample.excheck.executable=Excheck
