Change default size of BDD node table for JavaBDD: previously, this value was "10000", which is too low for any real usage. Increasing it was difficult because then CPAchecker crashed if started with less heap. Now there is an option that allows to specify the initial node table size in percentage of available heap memory, which should be easier to use in most situations. The new default is such that it should be slightly higher than the previous default for small-heap configurations and significantly higher (and hopefully faster) for large-heap configurations.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16455 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bddAnalysis-nospec.properties
+++ b/config/bddAnalysis-nospec.properties
@@ -18,6 +18,5 @@ BDDCPA.precision.trackIntAddVariables = true
 BDDCPA.precision.trackIntEqualVariables = true
 BDDCPA.precision.trackVariablesBesidesEqAddBool = false
 
-bdd.javabdd.initTableSize=10000000
-bdd.javabdd.cacheSize=500000
-
+# Use most of RAM for BDD library.
+bdd.javabdd.initTableRatio=0.3
