--- a/config/valueAnalysis-BDD-bool-3600s.properties
+++ b/config/valueAnalysis-BDD-bool-3600s.properties
@@ -8,8 +8,7 @@ analysis.traversal.order = bfs
 analysis.traversal.useCallstack = true
 analysis.traversal.useReversePostorder = true
 ARGCPA.cpa = cpa.composite.CompositeCPA
-bdd.javabdd.cacheSize = 500000
-bdd.javabdd.initTableSize = 5000000
+bdd.javabdd.initTableRatio = 0.05
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA, cpa.bdd.BDDCPA
 cpa = cpa.arg.ARGCPA
 
