--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -91,7 +91,8 @@
 
         <!-- Google error-prone
              Compiler adaptor with some useful checks for common errors. -->
-        <dependency org="com.google.errorprone" name="error_prone_ant" rev="1.1.1" transitive="false" conf="build->default" />
+        <dependency org="com.google.errorprone" name="error_prone_ant" rev="2.0.2" transitive="false" conf="build->default" />
+        <dependency org="com.google.errorprone" name="error_prone_annotations" rev="2.0.2" conf="build->default; contrib->sources" />
 
         <!-- FindBugs -->
         <dependency org="com.google.code.findbugs" name="findbugs" rev="3.0.0" conf="findbugs->default"/>
