Policy Iteration fixes
Fixes the iteration order (tremendous difference in performance).
Small bugfixes and refactorings, fixes statistics (grouping per
location).

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16558 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -16,6 +16,9 @@ defaultArrayLength = 3
 [cpa.stator.policy]
 generateOctagons=true
 
-[analysis]
-traversal.order = bfs
-
+# Picking a correct order is incredibly important and can mean >100x difference
+# in performance.
+[analysis.traversal]
+order = bfs
+useCallstack = true
+useReversePostorder = true
