Restarting version of policy iteration algorithm.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16573 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -4,6 +4,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 specification = specification/default.spc
 
+cpa.reportFalseAsUnknown=true
+
 [cfa]
 findLiveVariables = true
 
