--- a/config/policy-unrolling-congruence.properties
+++ b/config/policy-unrolling-congruence.properties
@@ -1,3 +1,8 @@
 #include policy-unrolling.properties
 
 cpa.stator.policy.runCongruence=true
+cpa.stator.policy.generateCube=true
+
+# analysis.checkCounterexamples = true
+# counterexample.checker = CPACHECKER
+# counterexample.checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
