--- a/config/components/refinementSelection-01-threshold.properties
+++ b/config/components/refinementSelection-01-threshold.properties
@@ -1,28 +1,18 @@
-# -----------------------------------------------------------------
-# This configuration file is based on the value analysis
-# using CEGAR & interpolation, but adds means for abstraction based
-# on soft and hard thresholds.
-# ------------------------------------------------------------------
 
-#include ../valueAnalysis-NoRefiner.properties
+#include ../valueAnalysis.properties
 
-# add PathConditionsCPA to allow for tracking of assigments along path, to then enforce thresholds
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.conditions.path.PathConditionsCPA
 
-# ----------------------------------------------------------
+cpa.conditions.path.condition                 = AssignmentsInPathCondition
+cpa.conditions.path.assignments.softThreshold = 0
+cpa.conditions.path.assignments.hardThreshold = 16
+cpa.conditions.path.assignments.precision     = GLOBAL
+
+analysis.algorithm.CEGAR      = false
+analysis.checkCounterexamples = false
 
 cpa.value.variableMappingFile = variableMapping.txt
 
-# ----------------------------------------------------------
+limits.time.cpu = 16s
 
-limits.time.cpu = 10s
-
-analysis.checkCounterexamples = false
-
-// merge will NOT unroll loops
-cpa.value.merge = join
-
-// analysis.traversal.order               = dfs
-// analysis.traversal.useReversePostorder = false
-// analysis.traversal.useCallstack        = false
 
