--- a/config/octagonAnalysis-refiner.properties
+++ b/config/octagonAnalysis-refiner.properties
@@ -5,4 +5,4 @@ analysis.algorithm.CEGAR                      = true
 cegar.refiner                                 = cpa.octagon.refiner.OctagonDelegatingRefiner
 cpa.octagon.initialPrecisionType              = REFINEABLE_EMPTY
 cpa.value.refiner.doLazyAbstraction           = false
-cpa.value.refiner.prefixPreference	      = DOMAIN_BEST_BOUNDED
+cpa.value.refiner.prefixPreference	      = DOMAIN_BEST_DEEP
