continue pre-analysis as long as possible (don't stop after error, disregard infeasible assumption)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refSel-dynamic@16648 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/refinementSelection-01-merge.properties
+++ b/config/components/refinementSelection-01-merge.properties
@@ -8,7 +8,15 @@ analysis.checkCounterexamples = false
 cpa.value.merge               = join
 cpa.value.variableMappingFile = variableMapping.txt
 
-limits.time.cpu = 10s
+limits.time.cpu = 15s
+
+
+cpa.value.stopAfterInfeasibleAssume = true
+analysis.stopAfterError = false
+
+analysis.traversal.order               = bfs
+analysis.traversal.useReversePostorder = false
+analysis.traversal.useCallstack        = false
 
 
 
