--- a/config/components/refinementSelection-01-threshold.properties
+++ b/config/components/refinementSelection-01-threshold.properties
@@ -13,6 +13,12 @@ analysis.checkCounterexamples = false
 
 cpa.value.variableMappingFile = variableMapping.txt
 
-limits.time.cpu = 16s
+limits.time.cpu = 15s
 
 
+cpa.value.stopAfterInfeasibleAssume = false
+analysis.stopAfterError = false
+
+analysis.traversal.order               = bfs
+analysis.traversal.useReversePostorder = false
+analysis.traversal.useCallstack        = false
