fix config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refSel-dynamic@16656 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/refinementSelection-01-merge.properties
+++ b/config/components/refinementSelection-01-merge.properties
@@ -11,7 +11,7 @@ cpa.value.variableMappingFile = variableMapping.txt
 limits.time.cpu = 15s
 
 
-cpa.value.stopAfterInfeasibleAssume = true
+cpa.value.stopAfterInfeasibleAssume = false
 analysis.stopAfterError = false
 
 analysis.traversal.order               = bfs
