Policy Iteration configuration updates.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16661 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -17,6 +17,7 @@ defaultArrayLength = 3
 
 [cpa.stator.policy]
 generateOctagons=true
+formulaSlicing=false
 
 # Picking a correct order is incredibly important and can mean >100x difference
 # in performance.
