--- a/config/policy-cube-congruence.properties
+++ b/config/policy-cube-congruence.properties
@@ -1,8 +1,7 @@
-#include policy-unrolling.properties
+#include policy-cube.properties
 
 cpa.stator.policy.runCongruence=true
-cpa.stator.policy.generateCube=true
-
+cpa.stator.congruence.trackCongruenceSum=true
 # analysis.checkCounterexamples = true
 # counterexample.checker = CPACHECKER
 # counterexample.checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
