--- a/config/policy-ensemble.properties
+++ b/config/policy-ensemble.properties
@@ -2,7 +2,7 @@ specification = specification/sv-comp.spc
 
 analysis.restartAfterUnknown = true
 
-restartAlgorithm.configFiles = policy-intervals.properties, policy.properties, policy-unrolling.properties, policy-unrolling-congruence.properties
+restartAlgorithm.configFiles = policy-intervals.properties, policy.properties, policy-unrolling.properties, policy-cube.properties, policy-cube-congruence.properties
 
 [cfa]
 findLiveVariables = true
