--- a/config/policy.properties
+++ b/config/policy.properties
@@ -14,6 +14,7 @@ ignoreIrrelevantVariables = true
 solver = Z3
 maxArrayLength = 3
 defaultArrayLength = 3
+solver.z3.requireProofs = false
 
 [cpa.stator.policy]
 generateOctagons=true
