--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -5,13 +5,13 @@
 
 #include bmc.properties
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.loopstack.LoopstackCPA, cpa.edgeexclusion.EdgeExclusionCPA, cpa.programcounter.ProgramCounterCPA, cpa.value.ValueAnalysisCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.bounds.BoundsCPA, cpa.edgeexclusion.EdgeExclusionCPA, cpa.programcounter.ProgramCounterCPA, cpa.value.ValueAnalysisCPA
 
 // enable induction for safety verification
 bmc.induction = true
 
 // induction proof requires the program to have only one single loop
-cfa.transformIntoSingleLoop = true
+cfa.transformIntoSingleLoop = false
 
 // provide additional automatically generated invariants to the induction proof
 bmc.addInvariantsByAI = true
@@ -27,13 +27,15 @@ invariantGeneration.async = true
 invariantGeneration.adjustConditions = true
 
 // activate iterative deepening (0 is infinite deepening)
-cpa.loopstack.maxLoopIterationsUpperBound = 0
+cpa.bounds.maxLoopIterationsUpperBound = 0
 
 // start iterative deepening with an initial bound of 1
-cpa.loopstack.maxLoopIterations = 1
+cpa.bounds.maxLoopIterations = 1
 
 // increment the bound by one in every iteration of deepening
-cpa.loopstack.maxLoopIterationAdjusterFactory = INCREMENT
+cpa.bounds.maxLoopIterationAdjusterFactory = INCREMENT
 
 cpa.predicate.solver = SMTInterpol
 cpa.predicate.encodeFloatAs = RATIONAL
+
+cpa.callstack.depth=1
